# traducteur_video

./: .gitignore  README.md  activate_venv.bat  activate_venv.ps1  backup-with-media.bundle  benchmark_disk.json  benchmark_memory.json  benchmark_tts.py  concat_list.txt  dub2.py  dub3.py  dub4.py  dub_video_from_srt.py  dub_video_s2s.py  generate_audio_from_subtitles.py  generate_first_cue_audio.py  main.py  problems.txt  pyproject.toml  requirements.txt  subtitle.srt  subtitle_first_fr.srt  subtitle_fr.srt  subtitle_small.srt  test.py  test_audio_cache.py  test_edge_stream.py  test_tts_bytes.py  test_tts_memory.py  translation_cache.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
prompt_templates/: translate_cue.txt  translate_srt.txt  translation_checklist.py  translation_checklist.txt
tests/: test_translation_checklist.py
