[project]
name = "traducteur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "edge-tts>=7.2.7",
    "groq>=1.0.0",
    "moviepy>=2.2.1",
    "openai>=2.16.0",
    "pysrt>=1.1.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
